[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causbayes"
version = "0.1.0"
description = "Bayesian Causal Discovery with Neural Structure Learning & LLM-Informed Priors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CausalBayes Contributors"},
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[optional-dependencies]
dev = [
    "pytest>=7",
    "black>=23",
    "isort>=5",
    "flake8>=6",
    "mypy>=1.0",
]
llm = [
    "openai>=1.0",
]
viz = [
    "graphviz>=0.20",
]
all = [
    "causbayes[dev,llm,viz]",
]

[project.urls]
Homepage = "https://github.com/causbayes/causbayes"
Documentation = "https://causbayes.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]
include = ["causbayes*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
